Grace/tests/gibbs/errors/t064.grace
// ERROR = P1018
var a :=
var b := 2
